it.unibz.udig.xplr.common/src/it/unibz/udig/xplr/grammar/generated/XpgParser.java
// Generated from /Users/sara/git/udigXpLR/regole/Xpg.g4 by ANTLR 4.1
package it.unibz.udig.xplr.grammar.generated;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class XpgParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DB=1, DR=2, LAYERS=3, DELTA=4, GAMMA=5, SEMANTICRULE=6, TRUE=7, FALSE=8, 
		ARROW=9, LT=10, GT=11, LPAREN=12, RPAREN=13, LGPAREN=14, RGPAREN=15, SEMICOLON=16, 
		COMMA=17, COLON=18, APICE=19, UNDERSCORE=20, EQUALS=21, UPPER=22, LOWER=23, 
		DIGITS=24, PLUS=25, ENDOFLINE=26, STRING=27, WS=28;
	public static final String[] tokenNames = {
		"<INVALID>", "'DB'", "'DR'", "'LAYERS'", "DELTA", "GAMMA", "SEMANTICRULE", 
		"'true'", "'false'", "'->'", "'<'", "'>'", "'('", "')'", "'{'", "'}'", 
		"';'", "','", "':'", "'''", "'_'", "'='", "UPPER", "LOWER", "DIGITS", 
		"'+'", "';\n'", "STRING", "WS"
	};
	public static final int
		RULE_xpgfile = 0, RULE_layers = 1, RULE_layer = 2, RULE_layername = 3, 
		RULE_something = 4, RULE_productions = 5, RULE_production = 6, RULE_linearRepresentation = 7, 
		RULE_relations = 8, RULE_deltarules = 9, RULE_triples = 10, RULE_semanticrules = 11, 
		RULE_relation = 12, RULE_triple = 13, RULE_condition = 14, RULE_driver = 15, 
		RULE_tester = 16, RULE_rules = 17, RULE_dbmapping = 18, RULE_deltarule = 19, 
		RULE_idrel = 20, RULE_semanticrule = 21, RULE_idrelation = 22, RULE_nonterminal = 23, 
		RULE_terminal = 24;
	public static final String[] ruleNames = {
		"xpgfile", "layers", "layer", "layername", "something", "productions", 
		"production", "linearRepresentation", "relations", "deltarules", "triples", 
		"semanticrules", "relation", "triple", "condition", "driver", "tester", 
		"rules", "dbmapping", "deltarule", "idrel", "semanticrule", "idrelation", 
		"nonterminal", "terminal"
	};

	@Override
	public String getGrammarFileName() { return "Xpg.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public XpgParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class XpgfileContext extends ParserRuleContext {
		public ProductionsContext productions() {
			return getRuleContext(ProductionsContext.class,0);
		}
		public LayersContext layers() {
			return getRuleContext(LayersContext.class,0);
		}
		public XpgfileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_xpgfile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XpgListener ) ((XpgListener)listener).enterXpgfile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XpgListener ) ((XpgListener)listener).exitXpgfile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XpgVisitor ) return ((XpgVisitor<? extends T>)visitor).visitXpgfile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final XpgfileContext xpgfile() throws RecognitionException {
		XpgfileContext _localctx = new XpgfileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_xpgfile);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50); layers();
			setState(51); productions();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LayersContext extends ParserRuleContext {
		public TerminalNode LPAREN() { return getToken(XpgParser.LPAREN, 0); }
		public LayerContext layer(int i) {
			return getRuleContext(LayerContext.class,i);
		}
		public TerminalNode RPAREN() { return getToken(XpgParser.RPAREN, 0); }
		public TerminalNode LAYERS() { return getToken(XpgParser.LAYERS, 0); }
		public List<LayerContext> layer() {
			return getRuleContexts(LayerContext.class);
		}
		public LayersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_layers; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XpgListener ) ((XpgListener)listener).enterLayers(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XpgListener ) ((XpgListener)listener).exitLayers(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XpgVisitor ) return ((XpgVisitor<? extends T>)visitor).visitLayers(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LayersContext layers() throws RecognitionException {
		LayersContext _localctx = new LayersContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_layers);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53); match(LAYERS);
			setState(54); match(LPAREN);
			setState(58);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << UPPER) | (1L << LOWER) | (1L << DIGITS))) != 0)) {
				{
				{
				setState(55); layer();
				}
				}
				setState(60);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(61); match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LayerContext extends ParserRuleContext {
		public TerminalNode EQUALS() { return getToken(XpgParser.EQUALS, 0); }
		public TerminalNode ENDOFLINE() { return getToken(XpgParser.ENDOFLINE, 0); }
		public LayernameContext layername() {
			return getRuleContext(LayernameContext.class,0);
		}
		public SomethingContext something() {
			return getRuleContext(SomethingContext.class,0);
		}
		public LayerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_layer; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XpgListener ) ((XpgListener)listener).enterLayer(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XpgListener ) ((XpgListener)listener).exitLayer(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XpgVisitor ) return ((XpgVisitor<? extends T>)visitor).visitLayer(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LayerContext layer() throws RecognitionException {
		LayerContext _localctx = new LayerContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_layer);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63); layername();
			setState(64); match(EQUALS);
			setState(65); something();
			setState(66); match(ENDOFLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LayernameContext extends ParserRuleContext {
		public List<TerminalNode> UPPER() { return getTokens(XpgParser.UPPER); }
		public TerminalNode LOWER(int i) {
			return getToken(XpgParser.LOWER, i);
		}
		public TerminalNode DIGITS(int i) {
			return getToken(XpgParser.DIGITS, i);
		}
		public List<TerminalNode> UNDERSCORE() { return getTokens(XpgParser.UNDERSCORE); }
		public TerminalNode UPPER(int i) {
			return getToken(XpgParser.UPPER, i);
		}
		public List<TerminalNode> LOWER() { return getTokens(XpgParser.LOWER); }
		public List<TerminalNode> DIGITS() { return getTokens(XpgParser.DIGITS); }
		public TerminalNode UNDERSCORE(int i) {
			return getToken(XpgParser.UNDERSCORE, i);
		}
		public LayernameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_layername; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XpgListener ) ((XpgListener)listener).enterLayername(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XpgListener ) ((XpgListener)listener).exitLayername(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XpgVisitor ) return ((XpgVisitor<? extends T>)visitor).visitLayername(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LayernameContext layername() throws RecognitionException {
		LayernameContext _localctx = new LayernameContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_layername);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << UPPER) | (1L << LOWER) | (1L << DIGITS))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			setState(72);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << UNDERSCORE) | (1L << UPPER) | (1L << LOWER) | (1L << DIGITS))) != 0)) {
				{
				{
				setState(69);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << UNDERSCORE) | (1L << UPPER) | (1L << LOWER) | (1L << DIGITS))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				}
				}
				setState(74);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SomethingContext extends ParserRuleContext {
		public List<TerminalNode> UPPER() { return getTokens(XpgParser.UPPER); }
		public List<TerminalNode> APICE() { return getTokens(XpgParser.APICE); }
		public TerminalNode UPPER(int i) {
			return getToken(XpgParser.UPPER, i);
		}
		public TerminalNode APICE(int i) {
			return getToken(XpgParser.APICE, i);
		}
		public SomethingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_something; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XpgListener ) ((XpgListener)listener).enterSomething(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XpgListener ) ((XpgListener)listener).exitSomething(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XpgVisitor ) return ((XpgVisitor<? extends T>)visitor).visitSomething(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SomethingContext something() throws RecognitionException {
		SomethingContext _localctx = new SomethingContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_something);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(75); match(UPPER);
			setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==UPPER) {
				{
				{
				setState(76); match(UPPER);
				}
				}
				setState(81);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(85);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=1 && _alt!=-1 ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(82); match(APICE);
					}
					} 
				}
				setState(87);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProductionsContext extends ParserRuleContext {
		public List<ProductionContext> production() {
			return getRuleContexts(ProductionContext.class);
		}
		public ProductionContext production(int i) {
			return getRuleContext(ProductionContext.class,i);
		}
		public ProductionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_productions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XpgListener ) ((XpgListener)listener).enterProductions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XpgListener ) ((XpgListener)listener).exitProductions(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XpgVisitor ) return ((XpgVisitor<? extends T>)visitor).visitProductions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProductionsContext productions() throws RecognitionException {
		ProductionsContext _localctx = new ProductionsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_productions);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(88); production();
				}
				}
				setState(91); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==LOWER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProductionContext extends ParserRuleContext {
		public NonterminalContext nonterminal() {
			return getRuleContext(NonterminalContext.class,0);
		}
		public LinearRepresentationContext linearRepresentation() {
			return getRuleContext(LinearRepresentationContext.class,0);
		}
		public TerminalNode ENDOFLINE() { return getToken(XpgParser.ENDOFLINE, 0); }
		public TerminalNode ARROW() { return getToken(XpgParser.ARROW, 0); }
		public ProductionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_production; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XpgListener ) ((XpgListener)listener).enterProduction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XpgListener ) ((XpgListener)listener).exitProduction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XpgVisitor ) return ((XpgVisitor<? extends T>)visitor).visitProduction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProductionContext production() throws RecognitionException {
		ProductionContext _localctx = new ProductionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_production);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93); nonterminal();
			setState(94); match(ARROW);
			setState(95); linearRepresentation();
			setState(96); match(ENDOFLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LinearRepresentationContext extends ParserRuleContext {
		public NonterminalContext nonterminal() {
			return getRuleContext(NonterminalContext.class,0);
		}
		public TerminalContext terminal() {
			return getRuleContext(TerminalContext.class,0);
		}
		public List<RelationsContext> relations() {
			return getRuleContexts(RelationsContext.class);
		}
		public DeltarulesContext deltarules() {
			return getRuleContext(DeltarulesContext.class,0);
		}
		public TriplesContext triples() {
			return getRuleContext(TriplesContext.class,0);
		}
		public SemanticrulesContext semanticrules() {
			return getRuleContext(SemanticrulesContext.class,0);
		}
		public RelationsContext relations(int i) {
			return getRuleContext(RelationsContext.class,i);
		}
		public LinearRepresentationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_linearRepresentation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XpgListener ) ((XpgListener)listener).enterLinearRepresentation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XpgListener ) ((XpgListener)listener).exitLinearRepresentation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XpgVisitor ) return ((XpgVisitor<? extends T>)visitor).visitLinearRepresentation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LinearRepresentationContext linearRepresentation() throws RecognitionException {
		LinearRepresentationContext _localctx = new LinearRepresentationContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_linearRepresentation);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			switch (_input.LA(1)) {
			case LOWER:
				{
				setState(98); nonterminal();
				}
				break;
			case UPPER:
				{
				setState(99); terminal();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(105);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=1 && _alt!=-1 ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(102); relations();
					}
					} 
				}
				setState(107);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			setState(109);
			_la = _input.LA(1);
			if (_la==DELTA) {
				{
				setState(108); deltarules();
				}
			}

			setState(112);
			_la = _input.LA(1);
			if (_la==GAMMA) {
				{
				setState(111); triples();
				}
			}

			setState(115);
			_la = _input.LA(1);
			if (_la==SEMANTICRULE) {
				{
				setState(114); semanticrules();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RelationsContext extends ParserRuleContext {
		public RelationContext relation() {
			return getRuleContext(RelationContext.class,0);
		}
		public NonterminalContext nonterminal() {
			return getRuleContext(NonterminalContext.class,0);
		}
		public TerminalContext terminal() {
			return getRuleContext(TerminalContext.class,0);
		}
		public RelationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_relations; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XpgListener ) ((XpgListener)listener).enterRelations(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XpgListener ) ((XpgListener)listener).exitRelations(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XpgVisitor ) return ((XpgVisitor<? extends T>)visitor).visitRelations(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RelationsContext relations() throws RecognitionException {
		RelationsContext _localctx = new RelationsContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_relations);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(117); relation();
			setState(120);
			switch (_input.LA(1)) {
			case LOWER:
				{
				setState(118); nonterminal();
				}
				break;
			case UPPER:
				{
				setState(119); terminal();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeltarulesContext extends ParserRuleContext {
		public RulesContext rules(int i) {
			return getRuleContext(RulesContext.class,i);
		}
		public TerminalNode LPAREN() { return getToken(XpgParser.LPAREN, 0); }
		public List<RulesContext> rules() {
			return getRuleContexts(RulesContext.class);
		}
		public TerminalNode RPAREN() { return getToken(XpgParser.RPAREN, 0); }
		public TerminalNode DELTA() { return getToken(XpgParser.DELTA, 0); }
		public DeltarulesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_deltarules; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XpgListener ) ((XpgListener)listener).enterDeltarules(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XpgListener ) ((XpgListener)listener).exitDeltarules(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XpgVisitor ) return ((XpgVisitor<? extends T>)visitor).visitDeltarules(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeltarulesContext deltarules() throws RecognitionException {
		DeltarulesContext _localctx = new DeltarulesContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_deltarules);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122); match(DELTA);
			setState(123); match(LPAREN);
			setState(125); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(124); rules();
				}
				}
				setState(127); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==DB || _la==DR );
			setState(129); match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TriplesContext extends ParserRuleContext {
		public TerminalNode RGPAREN() { return getToken(XpgParser.RGPAREN, 0); }
		public TripleContext triple(int i) {
			return getRuleContext(TripleContext.class,i);
		}
		public TerminalNode LGPAREN() { return getToken(XpgParser.LGPAREN, 0); }
		public TerminalNode GAMMA() { return getToken(XpgParser.GAMMA, 0); }
		public List<TripleContext> triple() {
			return getRuleContexts(TripleContext.class);
		}
		public TriplesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_triples; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XpgListener ) ((XpgListener)listener).enterTriples(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XpgListener ) ((XpgListener)listener).exitTriples(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XpgVisitor ) return ((XpgVisitor<? extends T>)visitor).visitTriples(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TriplesContext triples() throws RecognitionException {
		TriplesContext _localctx = new TriplesContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_triples);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131); match(GAMMA);
			setState(132); match(LGPAREN);
			setState(134); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(133); triple();
				}
				}
				setState(136); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==LPAREN );
			setState(138); match(RGPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SemanticrulesContext extends ParserRuleContext {
		public TerminalNode RGPAREN() { return getToken(XpgParser.RGPAREN, 0); }
		public TerminalNode LGPAREN() { return getToken(XpgParser.LGPAREN, 0); }
		public SemanticruleContext semanticrule() {
			return getRuleContext(SemanticruleContext.class,0);
		}
		public TerminalNode SEMANTICRULE() { return getToken(XpgParser.SEMANTICRULE, 0); }
		public SemanticrulesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_semanticrules; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XpgListener ) ((XpgListener)listener).enterSemanticrules(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XpgListener ) ((XpgListener)listener).exitSemanticrules(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XpgVisitor ) return ((XpgVisitor<? extends T>)visitor).visitSemanticrules(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SemanticrulesContext semanticrules() throws RecognitionException {
		SemanticrulesContext _localctx = new SemanticrulesContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_semanticrules);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140); match(SEMANTICRULE);
			setState(141); match(LGPAREN);
			setState(142); semanticrule();
			setState(143); match(RGPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RelationContext extends ParserRuleContext {
		public TerminalNode COMMA() { return getToken(XpgParser.COMMA, 0); }
		public TerminalNode LT() { return getToken(XpgParser.LT, 0); }
		public TesterContext tester() {
			return getRuleContext(TesterContext.class,0);
		}
		public DriverContext driver() {
			return getRuleContext(DriverContext.class,0);
		}
		public TerminalNode GT() { return getToken(XpgParser.GT, 0); }
		public RelationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_relation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XpgListener ) ((XpgListener)listener).enterRelation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XpgListener ) ((XpgListener)listener).exitRelation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XpgVisitor ) return ((XpgVisitor<? extends T>)visitor).visitRelation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RelationContext relation() throws RecognitionException {
		RelationContext _localctx = new RelationContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_relation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145); match(LT);
			setState(146); driver();
			setState(148);
			_la = _input.LA(1);
			if (_la==COMMA) {
				{
				setState(147); match(COMMA);
				}
			}

			setState(151);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << UPPER) | (1L << LOWER) | (1L << DIGITS))) != 0)) {
				{
				setState(150); tester();
				}
			}

			setState(153); match(GT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
